--- a/SGStructures.mediawiki
+++ b/SGStructures.mediawiki
@@ -140,7 +140,7 @@ The Data Fields section provides basic information about each field in the struc
 |<( |2 30%>''If'' __another API page__ is referenced
 |''Action'': Be sure to [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] it and use () outside the link markup if it is a function.
 |-
-|''Example'': [[SDL_Event]], [[SDL_AudioSpec]]
+|''Example'': [[SDL_Event]], [[SDL_AudioSpec]], [[SDL_SysWMinfo]]
 |-
 |<( |4 30%>''If'' there are __important, distinct groups of fields__ within the structure
 |''Action'': Create sections by placing a full-width row with a grey background and centered, italics title above each group.
@@ -178,16 +178,39 @@ The Data Fields section provides basic information about each field in the struc
 |type*
 |...```, [[SDL_Surface]], [[SDL_assert_data]]
 |-
-|<( |2 30%>''If''
-|''Action'':
-|-
-|''Example'':
-|-
 |
 |<bgcolor="#EDEDED">''Second Column (field)''
 |-
 |
+|<(>There are currently no special formatting instructions for this column other than above.
+|-
+|
 |<bgcolor="#EDEDED">''Third Column (description)''
+|-
+|<( |3 30%>''If'' __more than one statement__ must be included in the description
+|''Action'': Separate them with a semi-colon (;)
+|-
+|''Note'': This should be avoided whenever possible.  See "''If'' a __[[#detailed|more detailed description]]__ is required to adequately explain a parameter" below for more details.
+|-
+|''Example'': [[SDL_JoyButtonEvent]], [[SDL_Keysym]]
+|-
+|<( |4 30%>''If'' a __more detailed description__ is required to adequately explain a field
+|<span id="detailed"></span>''Action 1'' : Append the following, verbatim, to the end of the brief description<br/>```; see [[#Remarks|Remarks]] for details```
+|-
+|''Action 2'': Place the more detailed information in the [[#Remarks|Remarks]] section.
+|-
+|''Action 3'': See "''If'' the __[[#large|Remarks section is large]]__" below for more details.
+|-
+|''Example'': [[SDL_RendererInfo]], [[SDL_HapticEffect]]
+|-
+|<( |4 30%>''If'' the __Remarks section is large__
+|<span id="large"></span>''Action 1'': Create an [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Anchors anchor] immediately before the additional comments you are adding to the Remarks section.
+|-
+|''Markup'': Use ```<span id="anchorname"></span>```, where <code>anchorname</code> is a name of your choosing, to create the anchor in the Remarks section. See [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Anchors Anchors] for details.
+|-
+|''Action 2'': Modify the Remarks link in the parameter description (see ''Action 1'' in "''If'' a __[[#detailed|more detailed description]]__ is required to adequately explain a parameter" above) to the following:<br/>```; see [[#anchorname|Remarks]] for details```<br/>where <code>anchorname</code> matches the name you chose for the anchor in ''Action 1''.
+|-
+|''Example'': [[SDL_RendererInfo]]
 |-
 |<( |4 30%>''If'' __a field references another field__ on that same page
 |''Action'': Use '''[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold]''' for the field name.
@@ -196,6 +219,11 @@ The Data Fields section provides basic information about each field in the struc
 |-
 |''Note'': If the reference is to the field as a ''concept'' rather than ''directly'' to the field itself do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
 |-
-|''Example'': [[SDL_AudioCVT]]()
+|''Example'': [[SDL_AudioCVT]], [[SDL_HapticCustom]]
 |}
-large remarks SDL_RendererInfo
+
+{|
+|<( |2 30%>''If''
+|''Action'':
+|-
+|''Example'':
