--- a/SDL_CreateThread.mediawiki
+++ b/SDL_CreateThread.mediawiki
@@ -12,12 +12,16 @@ Use this function to create a new thread with the same properties as the parent 
 == Syntax ==
 ```c++
 SDL_Thread* SDL_CreateThread(SDL_ThreadFunction fn,
+                             const char*        name,
                              void*              data)
 ```
 == Function Parameters ==
 {|
 |'''fn''' 
-|The function to be run in the new thread, see [[#Remarks|Remarks]] for details.
+|the function to be run in the new thread; see [[#Remarks|Remarks]] for details
+|-
+|'''name'''
+|the name of the thread; see [[#name|Remarks]] for details
 |-
 |'''data''' 
 |a void* user context parameter ''-and/or-'' <code>passed directly to the thread function</code> ''-or-'' ^a pointer to the data to be passed to the function in the new thread^ 
@@ -25,7 +29,7 @@ SDL_Thread* SDL_CreateThread(SDL_ThreadFunction fn,
 
 
 == Return Value ==
-Returns the new thread pointer on success, NULL if the new thread could not be created. This is a pointer to an SDL defined device independent thread information structure. The returned thread pointer will be used for any subsuequent calls to manage this thread.
+Returns the new thread pointer on success, NULL if the new thread could not be created. This is a pointer to an SDL defined device independent thread information structure. The returned thread pointer will be used for any subsequent calls to manage this thread.
 
 <<Color2(green,Should it be mentioned here that the function '''fn''' itself returns an int or is it sufficient to note that in the Remarks?)>>
 
@@ -88,6 +92,8 @@ Thread counter: 8
 Thread counter: 9
 Thread returned value:10
 ```
+
+
 == Remarks ==
 *<br/>[[SDL_CreateThread]]() creates a new thread of execution that shares all of its parent's global memory, signal handlers, file descriptors, etc, and runs the function '''fn''', passing it the void pointer '''data'''.  The thread quits when '''fn''' returns. <br/>*
 
@@ -95,9 +101,16 @@ Thread returned value:10
 
 : ```int (SDLCALL * SDL_ThreadFunction) (void *data)```<br/> <<Color2(green,Should this be in a gray box instead?)>>
 
-Always use the caller's <code>_beginthread()</code> and <code>_endthread()</code> APIs to start a new thread. This way, if it's the SDL.DLL which uses this API, then the RTL of SDL.DLL will be used to create the new thread, and if it's the application, then the RTL of the application will be used.  <<Color2(green,This information is also listed on the main Category page in more detail but it seems relevant to list at least some of it here as well.  Should the header to referenced as a link for more information?)>>
+Always use the caller's <code>_beginthread()</code> and <code>_endthread()</code> APIs to start a new thread. This way, if it's the SDL.DLL which uses this API, then the RTL of SDL.DLL will be used to create the new thread, and if it's the application, then the RTL of the application will be used.  <<Color2(green,This information is also listed on the main Category page in more detail but it seems relevant to list at least some of it here as well.  Should the header be referenced as a link for more information?)>>
 
 <<Color2(green,Is the int that is returned equivalent to the thread ID or is it just an integer to indicate success or failure?  Should it be further defined here?)>>
+
+<span id="name"></span>
+Thread naming is a little complicated: Most systems have very small limits for the string length (BeOS has 32 bytes, Linux currently has 16, Visual C++ 6.0 has nine!), and possibly other arbitrary rules. You'll have to see what happens with your system's debugger. The name should be UTF-8 (but using the naming limits of C identifiers is a better bet).  
+
+There are no requirements for thread naming conventions, so long as the string is null-terminated UTF-8, but these guidelines are helpful in choosing a name:
+: http://stackoverflow.com/questions/149932/naming-conventions-for-threads
+If a system imposes requirements, SDL will try to munge the string for it (truncate, etc), but the original string contents will be available from [[SDL_GetThreadName]]().
 
 *<br/><<Color2(green,The following bugs were listed in the old wiki. Do any still apply in 1.3 or were they resolved by adding the instructions about <code>_beginthread()</code> and <code>_endthread()</code>?)>>
 
