--- a/SGStructures.mediawiki
+++ b/SGStructures.mediawiki
@@ -82,9 +82,9 @@ The Description section immediately follows the page title and does not have it'
 |<( |2 30%>''If'' __another API page__ is referenced in the description
 |''Action'': Be sure to [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink] it and use () outside the link markup if it is a function.
 |-
-|''Example'': ```[[SDL_FunctionName]](), [[SDL_StructureName]]```
+|''Example'': ```[[SDL_FunctionName]](), [[SDL_StructureName]]```, [[SDL_GetThreadName]]()
 |-
-|<( |3 30%>''If'' __a parameter__ on that page is referenced in the description
+|<( |3 30%>''If'' __a parameter on that page__ is referenced in the description
 |''Action'': Use '''[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold]''' for the parameter name.
 |-
 |''Note'': This is a very rare occurrence.
@@ -224,3 +224,355 @@ The Data Fields section provides basic information about each field in the struc
 |''Action'': It is acceptable to leave the description cell blank, although it is preferable to put some information there even if it is redundant with the field name or otherwise does not really provide any new information.
 |-
 |''Example'': [[SDL_Color]]
+|}
+
+
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+=== Code Examples ===
+The Code Examples section is meant to contain simple, meaningful examples of how to use the structure in a program.  
+* Unlike other sections, which should rarely require editing once DRAFT is removed, this section is ''expected'' to change over time.
+
+This is one of the few sections that is intended to grow and adjust as users discover more information about a structure that would be helpful to share with other users.
+
+For the most part the contents of the Code Examples section will be user-generated and this section will remain as-is until users input their examples.
+
+'''Please see the [http://wiki.libsdl.org/moin.cgi/SGCodeExamples Code Examples] Style Guide for details on editing this section.'''
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+=== Remarks ===
+The Remarks section is meant to contain additional information that did not fit in the other sections as well as comments regarding the behavior and use of the structure in real-world applications.  
+* Unlike other sections, which should rarely require editing once DRAFT is removed, this section is ''expected'' to change over time.
+
+This is one of the few sections that is intended to grow and adjust as users discover more information about how a structure behaves under different circumstances.
+
+For the most part the contents of the Remarks section will be user-generated and this section will remain as-is until users input their comments. 
+
+''Note'': This is __not__ an appropriate place to post questions, suggestions, bugs, or commentary.  Please use the other communication channels available to you, especially the [http://forums.libsdl.org/ forums] and ''Feedback'' form, for these types of remarks.
+
+'''Please see the [http://wiki.libsdl.org/moin.cgi/SGRemarks Remarks] Style Guide for details on editing this section.'''
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+=== Related Enumerations ===
+The Related Enumerations section provides a list of enumerations specifically referenced by the structure or otherwise ''closely'' related to it.
+
+''Note'': '''In most cases this section will be empty and should be removed from the page.'''
+
+'''This list __should__ include:'''
+* enumerations that are specifically referenced in the structure
+* enumerations that are indirectly referenced by but closely related to the structure
+
+'''This list __should not__ include:'''
+* the primary enumeration on that page
+* every other enumeration that might be considered "related" 
+: ~-Including too many would make these lists much less valuable.-~
+* all enumerations of similar type
+* all enumerations of a related category
+* enumerations that are indirectly related (ie: it might be common to use them together)
+* enumerations that do not have a page in the wiki
+* non-enumerations (ie: do not include functions or structures in this list)
+
+''Markup'': Each line should begin with a single blank space and a period followed by the enumeration name enclosed in double brackets to create a [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink].
+: ''Note'': Do not include empty parentheses after the name.
+
+: '''The basic format for the Related Enumerations list is:'''
+```
+== Related Enumerations ==
+ .[[SDL_EnumerationName]]
+ .[[SDL_EnumerationName]]
+```
+: ~-''Note'': The heading was included to more clearly illustrate the blank space before the period at the beginning of each list line.  Without this markup the format will not parse correctly.-~
+
+{|
+|<( 30%>''If'' there is __more than one enumeration__ in the list
+|''Action'': List the enumerations in alphabetical order.
+|-
+|<( 30%>''If'' there are __no related enumerations__
+|''Action'': This section may be removed entirely (including the heading) and added back at a later time if it becomes relevant.
+|}
+
+''Example'': [[SDL_Event]], [[SDL_Keysym]], [[SDL_WindowEvent]]
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+=== Related Structures ===
+The Related Structures section provides a list of other structures specifically referenced by the structure or otherwise ''closely'' related to it.
+
+''Note'': '''In most cases this section will be empty and should be removed from the page.'''
+
+'''This list __should__ include:'''
+* other structures that are specifically referenced in the structure
+* other structures that are indirectly referenced by but closely related to the structure
+
+'''This list __should not__ include:'''
+* the primary structure on that page
+* every other structure that might be considered "related" 
+: ~-Including too many would make these lists much less valuable.-~
+* all structures of similar type
+* all structures of a related category
+* structures that are indirectly related (ie: it might be common to use them together)
+* structures that do not have a page in the wiki
+* non-structures (ie: do not include functions or enumerations in this list)
+
+''Markup'': Each line should begin with a single blank space and a period followed by the structure name enclosed in double brackets to create a [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink].
+: ''Note'': Do not include empty parentheses after the name.
+
+: '''The basic format for the Related Structures list is:'''
+```
+== Related Structures ==
+ .[[SDL_StructureName]]
+ .[[SDL_StructureName]]
+```
+: ~-''Note'': The heading was included to more clearly illustrate the blank space before the period at the beginning of each list line.  Without this markup the format will not parse correctly.-~
+
+{|
+|<( 30%>''If'' there is __more than one structure__ in the list
+|''Action'': List the structures in alphabetical order.
+|-
+|<( 30%>''If'' there are __no related structures__
+|''Action'': This section may be removed entirely (including the heading) and added back at a later time if it becomes relevant.
+|}
+
+''Example'': [[SDL_Event]], [[SDL_Color]], [[SDL_HapticDirection]]
+
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+<span id="RFs"></span>
+=== Related Functions ===
+The Related Functions section provides a list of functions specifically associated with that structure or otherwise ''closely'' related to it.
+* In general, a "Related Function" is one that __uses the given structure__.
+
+'''This list __should__ include:'''
+* functions that use or are otherwise very closely related to the structure
+
+'''This list __should not__ include:'''
+* every other function that might be considered "related" 
+: ~-Including too many would make these lists much less valuable.-~
+* all functions of similar type or action
+* all functions of a related category
+* functions that are indirectly related (ie: a similar function that does not use the structure)
+* functions that do not have a page in the wiki
+* non-functions (ie: do not include structures or enumerations in this list)
+
+''Markup'': Each line should begin with a single blank space and a period followed by the function name enclosed in double brackets to create a [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Hyperlinks hyperlink].
+: ''Note'': Do not include empty parentheses after the function names in this section.  They are all functions so it should be understood/unnecessary.
+
+: '''The basic format for the Related Functions list is:'''
+```
+== Related Functions ==
+ .[[SDL_FunctionName]]
+ .[[SDL_FunctionName]]
+```
+: ~-''Note'': The heading was included to more clearly illustrate the blank space before the period at the beginning of each list line.  Without this markup the format will not parse correctly.-~
+
+{|
+|<( 30%>''If'' there is __more than one function__ in the list
+|''Action'': List the functions in alphabetical order.
+|-
+|<( 30%>''If'' there are __no related functions__
+|''Action'': This section may be removed entirely (including the heading) and added back at a later time if it becomes relevant.
+|}
+
+''Example'': [[SDL_TextInputEvent]](), [[SDL_SysWMinfo]]()
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+<span id="footer"></span>
+=== Footer ===
+
+The Footer section consists of a horizontal rule followed by two links separated by a comma.  
+
+''Markup'': 
+```
+----
+[[CategoryStruct]], [[CategoryHeader]]
+```
+: where <code>Categor</code><code>yStruct</code> is the same for every structure page and <code>Categor</code><code>yHeader</code> is structure-specific with <code>Header</code> varying based on the header file containing the structure (see below).
+
+<<Color2(red,''Important!'')>> Category names do not always match the header file name.  Please consult the following [[#CategoryTable|table]] for the correct name to use so the structure will appear in the correct list(s).
+
+''Action 1'': '''Do not edit the <code>Categor</code><code>yStruct</code> link!'''
+
+''Action 2'': '''The ```CategoryHeader``` link may be edited''' ''if'' the page still says {{{[[CategoryHeader]]}}} (as on a new page) or ''if'' the structure has been relocated to another header (very rare).
+
+''<<Color2(red,Important!)>>'' There are a few exceptions to this rule (pages with a category name that does not match their header file).  These have been determined by the SDL team.  Please do not change an existing page's category name simply because it does not match its header file.  If you are concerned that a name is incorrect please submit ''Feedback'' from that page or contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to confirm the change first.  
+
+''Markup'': Replace <code>Categor</code><code>yHeader</code> with the appropriate category name from the table that follows, or contact us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to find out what category name to use if you are unsure or if the category appears to be missing.
+
+<span id="CategoryTable"></span>
+{|
+|<rowbgcolor="#EDEDED">''Header File Containing the Structure*''
+|''Corresponding Category Name''
+|-
+|SDL.h
+|CategoryInit
+|-
+|SDL_assert.h
+|CategoryAssertions
+|-
+|SDL_atomic.h
+|CategoryAtomic
+|-
+|SDL_audio.h
+|CategoryAudio
+|-
+|SDL_clipboard.h
+|CategoryClipboard
+|-
+|SDL_compat.h
+|CategoryCompat
+|}
+<!-- #||SDL_copying.h|||| -->
+{|
+|SDL_cpuinfo.h
+|CategoryCPU
+|-
+|SDL_endian.h
+|CategoryEndian
+|-
+|SDL_error.h
+|CategoryError
+|-
+|SDL_events.h
+|CategoryEvents
+|}
+<!-- #||SDL_gesture.h|||| -->
+{|
+|SDL_haptic.h
+|CategoryForceFeedback
+|-
+|SDL_hints.h
+|CategoryHints
+|}
+<!-- #||SDL_input.h|||| -->
+{|
+|SDL_joystick.h
+|CategoryJoystick
+|-
+|SDL_keyboard.h
+|CategoryKeyboard
+|-
+|SDL_keycode.h
+|CategoryKeyboard
+|-
+|SDL_loadso.h
+|CategorySharedObject
+|-
+|SDL_log.h
+|CategoryLog
+|}
+<!-- #||SDL_main.h|||| -->
+{|
+|SDL_mouse.h
+|CategoryMouse
+|-
+|SDL_mutex.h
+|CategoryMutex
+|}
+<!-- #||SDL_name.h|||| -->
+<!-- #||SDL_opengl.h||CategoryOpenGL|| -->
+<!-- #||SDL_opengles.h||CategoryOpenGL|| -->
+<!-- #||SDL_opengles2.h||CategoryOpenGL|| -->
+{|
+|SDL_pixels.h
+|CategoryPixels
+|-
+|SDL_platform.h
+|CategoryPlatform
+|-
+|SDL_power.h
+|CategoryPower
+|-
+|SDL_quit.h
+|CategoryEvents
+|-
+|SDL_rect.h
+|CategoryRect
+|-
+|SDL_render.h
+|CategoryRender
+|}
+<!-- #||SDL_revision.h|||| -->
+{|
+|SDL_rwops.h
+|CategoryIO
+|-
+|SDL_scancode.h
+|CategoryKeyboard
+|}
+<!-- #||SDL_shape.h|||| -->
+<!-- #||SDL_stdinc.h|||| -->
+{|
+|SDL_surface.h
+|CategorySurface
+|-
+|SDL_syswm.h
+|CategorySWM
+|-
+|SDL_thread.h
+|CategoryThread
+|-
+|SDL_timer.h
+|CategoryTimer
+|}
+<!-- #||SDL_touch.h|||| -->
+<!-- #||SDL_types.h|||| -->
+{|
+|SDL_version.h
+|CategoryVersion
+|-
+|SDL_video.h
+|CategoryVideo
+|-
+|
+|~-*Some exceptions exist.  See above.-~
+|}
+
+
+
+
+
+
+
+
+
+
+
+~-[[#ToC|Return to Table of Contents]]-~
+<br/>
+<br/>
+----
+== Resources ==
+
+Our goal is to create accurate, consistent, helpful, user-friendly documentation.  We appreciate your efforts to make your additions fit into the existing framework and retain the same look and feel as much as possible.
+
+If you have questions that aren't addressed here:
+ a. Search for another page that contains something similar to what you want to do and copy all the basics as much as applicable.  
+ a. Check the other SDL [http://wiki.libsdl.org/moin.cgi/Contributing#guides Style Guides].
+ a. Post a question to ''[http://wiki.libsdl.org/moin.cgi/Contributing#form Feedback]'' and ''include a way to contact you''.
+ a. Post a question to the [http://wiki.libsdl.org/moin.cgi/Contributing#list Documentation Mailing List]
+ a. Send a comment or question to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> for clarification.
+
+If you have suggestions for changes or additions to this document or any other portion of the wiki please don't hesitate to contact us with your thoughts.  We are happy to have the participation!
+
+------
+== Disclaimer ==
+```#!wiki note
+All content modifications are subject to review for consistency and quality.  We reserve the right to remove or modify any content added to this wiki at any time.  You may direct questions or concerns to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
+```
