--- a/SDL_Has3DNow.mediawiki
+++ b/SDL_Has3DNow.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_Has3DNow =
-Use this function to ,,return true if,, ^determine whether^ the CPU has 3DNow!\ features.
+Use this function to ,,return true if,, ^determine whether^ the CPU has 3DNow! features.
 
 
 == Syntax ==
