--- a/SDL_TextInputEvent.mediawiki
+++ b/SDL_TextInputEvent.mediawiki
@@ -34,6 +34,7 @@ You can add your code example here
 :[[SDL_EventType]]
 
 == Related Structures ==
+:[[SDL_Event]]
 :[[SDL_TextEditingEvent]]
 
 == Related Functions ==
