--- a/SDL_SysWMmsg.mediawiki
+++ b/SDL_SysWMmsg.mediawiki
@@ -12,11 +12,11 @@ A structure that contains system-dependent window manager messages.
 |
 |<bgcolor="#EDEDED">''All Subsystems''
 |-
-|SDL_version
+|[[SDL_version]]
 |'''version'''
 |an [[SDL_version]] structure that contains the current SDL version
 |-
-|SDL_SYSWM_TYPE
+|[[SDL_SYSWM_TYPE]]
 |'''subsystem'''
 |the windowing system type; see [[#Remarks|Remarks]] for details
 |-
@@ -68,6 +68,12 @@ You can add your code example here
 <<Include(SDL_SYSWM_TYPE, , , from="== Values ==", to="== Code Examples ==")>>
 
 There are currently no Cocoa or UIKit window events.
+
+== Related Enumerations ==
+:[[SDL_SYSWM_TYPE]]
+
+== Related Structures ==
+:[[SDL_version]]
 
 ----
 [[CategoryStruct]], [[CategorySWM]]
