update content for consistency - RE, RS

--- a/SDL_SysWMEvent.mediawiki
+++ b/SDL_SysWMEvent.mediawiki
@@ -33,9 +33,10 @@ int SDL_GetWMInfo(SDL_SysWMinfo *info);
 
 == Related Enumerations ==
 :[[SDL_EventMask]]???
-:[[SDL_EventType]]???
+:[[SDL_EventType]]
 
 == Related Structures ==
+:[[SDL_Event]]
 :[[SDL_SysWMinfo]]
 :[[SDL_SysWMmsg]]???
 
