camelcase pragma change

--- a/SDL_Event.mediawiki
+++ b/SDL_Event.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_Event =
 A union that contains structures for the different event types.
